	* src/de/schlund/pfixcore/oxm/impl/serializers/MapSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/DateSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/ArraySerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/SimpleEnumSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/ObjectToStringSerializer.java

2008-03-07  jtl  <jtl@schoenberg.laudi.ka>

	* src/de/schlund/pfixxml/util/Xslt.java: deprecate loadTemplates(path)
	
	* src/de/schlund/pfixxml/util/Path.java: 
	* src/de/schlund/pfixxml/PathFactory.java: deprecate
	
	* src/de/schlund/pfixxml/util/xsltimpl/XmlSaxon2.java: 
	directly use NodeOverNodeInfo.wrap()

	* src/de/schlund/pfixcore/webservice/jsonws/serializers/MapSerializer.java: 	
	* src/de/schlund/pfixcore/webservice/jsonws/serializers/BeanSerializer.java: 
	* src/de/schlund/pfixcore/webservice/json/JSONValue.java: cosmetics. 
	uses JSONValue.NULL directly
	
	* src/de/schlund/pfixxml/targets/TargetGenerator.java: 
	* src/de/schlund/pfixxml/FactoryInitServlet.java: 
	* src/de/schlund/pfixcore/util/XsltCustomizeXmlTask.java: 
	directly use TransformerFactory.newInstance()

	* src/de/schlund/pfixcore/generator/postchecks/StringLength.java: 
	remove deprecated wrongly spelled method.

2008-03-07  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* docs/docbook/src/css/style.css: 
	Some extra style changes
	
	* src/de/schlund/pfixcore/example/webservices/ContextDataImpl.java: 
	* src/de/schlund/pfixcore/generator/casters/ToPerl5Pattern.java: 
	* src/de/schlund/pfixcore/generator/prechecks/RegexpCheck.java: 
	* src/de/schlund/pfixcore/lucefix/ContextSearchImpl.java: 
	* src/de/schlund/pfixcore/util/basicapp/basics/CreateProjectSettings.java: 
	* src/de/schlund/pfixcore/util/Cleanup.java: 
	* src/de/schlund/pfixcore/util/DelLang.java: 
	* src/de/schlund/pfixcore/util/DumpText.java: 
	* src/de/schlund/pfixcore/util/ImportText.java: 
	* src/de/schlund/pfixcore/util/TokenUtils.java: 